web-app-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mypod-service
spec:
  type: LoadBalancer
  selector:
    app: nginx
    #department: sales
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
