web-p.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-1
  labels:
    app: nginx-1
spec:
  ports:
  - port: 80
    name: web-p
  clusterIP: None
  selector:
    app: nginx-1
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web-p
spec:
  serviceName: "nginx-1"
  replicas: 2
  selector:
    matchLabels:
      app: nginx-1
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
      - name: nginx-1
        image: k8s.gcr.io/nginx-slim:0.8
        ports:
        - containerPort: 80
          name: web-p
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
